Add focus state

--- a/styles/tokens.css
+++ b/styles/tokens.css
@@ -40,3 +40,5 @@
   --Elevation-Position-Y-Level-3: 8px;
   --Elevation-Blur-Level-3: 16px;
   --Elevation-Spread-Level-3: 0px;
+
+  --Stroke-Focus: #B53CDE;
