--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -77,6 +77,17 @@
 }
 
 
+
+.button.secondary:focus,
+.button.secondary.small:focus {
+  border-radius: var(--Corner-radius-Round, 999px);
+  border: var(--Stroke-weight-Button-stroke, 2px) solid var(--Stroke-Secondary, #999);
+  background: var(--Background-Light-Primary, #FFF);
+  box-shadow: 0px 0px 0px 2px #FFF, 0px 0px 0px 4px var(--Stroke-Focus, #B53CDE);
+  outline: none;
+}
+
+
 /* Primary Button: Large */
 
 .button.primary {
@@ -123,6 +134,14 @@
   border-radius: var(--Corner-radius-Round, 999px);
   background: var(--Background-Dark-Dark, #134276);
   transform: scale(0.98);
+}
+
+
+
+.button.primary:focus {
+  border-radius: var(--Corner-radius-Round, 999px);
+  background: var(--Background-Dark-Dark, #134276);
+  outline: none;
 }
 
 
