--- a/styles/tokens.css
+++ b/styles/tokens.css
@@ -1,47 +1,39 @@
+/* stylelint-disable custom-property-pattern */
+
 :root {
   --Spacing-Spacing-200: 8px;
   --Spacing-Spacing-300: 12px;
   --Spacing-Spacing-400: 16px;
   --Spacing-Spacing-500: 24px;
   --Spacing-Spacing-600: 32px;
-
   --Corner-radius-Round: 999px;
-
   --Stroke-weight-Button-stroke: 2px;
   --Stroke-Secondary: #999;
   --Stroke-Primary: #333;
   --Stroke-Accent: #017AC9;
-
   --Background-Light-Primary: #FFF;
   --Text-Dark-Secondary: #666;
-
   --Typography-Font-family-Primary-font: "Atkinson Hyperlegible Next", sans-serif;
   --Typography-Sizes-Components-Button-default: 20px;
   --Typography-Font-weight-Regular: 400;
   --Typography-Spacing-Character-Default: 0px;
-
   --color-primary-dark: #003f7f;
-  --elevation-2: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  --elevation-2: 0px 4px 6px rgb(0 0 0 / 10%);
 }
 
   --Background-Dark-Accent: #017AC9;
   --Background-Dark-Dark: #134276;
-
   --Gradient-Blue: linear-gradient(135deg, var(--Brand-MSD-Blue, #017AC9) 25%, var(--Brand-MSD-Navy, #134276) 100%);
   --Brand-MSD-Blue: #017AC9;
   --Brand-MSD-Navy: #134276;
-
   --Elevation-Position-X-Level-2: 0px;
   --Elevation-Position-Y-Level-2: 4px;
   --Elevation-Blur-Level-2: 8px;
   --Elevation-Spread-Level-2: 0px;
-
   --Elevation-Position-X-Level-3: 0px;
   --Elevation-Position-Y-Level-3: 8px;
   --Elevation-Blur-Level-3: 16px;
   --Elevation-Spread-Level-3: 0px;
-
   --Stroke-Focus: #B53CDE;
-
   --Corner-radius-Large: 16px;
   --Greys-White: #FFF;
