--- a/blocks/form/components/formhero/formhero.css
+++ b/blocks/form/components/formhero/formhero.css
@@ -1,3 +1,33 @@
-.panel-heroform {
-    background-color: pink;
+/* COMPILED CSS VERSION OF FORMHERO.SCSS */
+.formhero {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+  padding: 48px 32px;
+  background-color: #f9f9f9;
+}
+.formhero h2 {
+  font-family: "Atkinson Hyperlegible Next";
+  font-size: 2rem;
+  font-weight: 500;
+  margin-bottom: 16px;
+  color: #333;
+}
+.formhero .form-fields {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+@media (min-width: 768px) {
+  .formhero {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .formhero .form-fields {
+    width: 60%;
+  }
+  .formhero .wizard-button-wrapper {
+    width: 35%;
+    align-self: flex-end;
+  }
 }
