--- a/blocks/form/components/formhero/_wizard-buttons.scss
+++ b/blocks/form/components/formhero/_wizard-buttons.scss
@@ -5,7 +5,7 @@
   gap: 32px;
   margin-top: 48px;
 }
-.wizard-button {
+/*.wizard-button {
   min-width: 120px;
   text-transform: uppercase;
   font-weight: 500;
@@ -26,7 +26,7 @@
 .wizard-button:focus {
   outline: none;
   box-shadow: 0 0 0 3px #b53cde;
-}
+}*/
 
 /* Primary Wizard Button: Large + icon */
 .wizard-button {
