--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -421,7 +421,8 @@ input::file-selector-button {
 }
 
 main .form button {
-    color: var(--form-button-color);
+    /*color: var(--form-button-color);*/
+    color: blueviolet;
     background: var(--form-button-background-color);
     border: var(--form-button-border);
     padding: var(--form-button-padding);
