--- a/styles/base/_elements.scss
+++ b/styles/base/_elements.scss
@@ -5,40 +5,41 @@
 */
 @use '../settings' as *;
 body {
-    font-family: $font-family;
-    font-size: $base-font-size;
-    font-weight: $font-weight-regular;
-    line-height: $line-height-text;
-    color: $text-color;
+  font-family: $font-family;
+  font-size: $base-font-size;
+  font-weight: $font-weight-regular;
+  line-height: $line-height-text;
+  color: $text-color;
+  background-color: red;
 }
 
 ul {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 picture {
-    display: block;
+  display: block;
 }
 
 table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-bottom: 2rem;
+  width: 100%;
+  border-collapse: collapse;
+  margin-bottom: 2rem;
 }
 
 th,
 td {
-    text-align: left;
-    padding: 0.75em 1em;
-    border: 1px solid var(--grey-black-20);
+  text-align: left;
+  padding: 0.75em 1em;
+  border: 1px solid var(--grey-black-20);
 }
 
 th {
-    background-color: var(--grey-black-05);
-    font-weight: var(--font-weight-bold);
+  background-color: var(--grey-black-05);
+  font-weight: var(--font-weight-bold);
 }
 
 tr:nth-child(even) td {
-    background-color: var(--grey-black-05);
+  background-color: var(--grey-black-05);
 }
