--- a/styles/base/_elements.scss
+++ b/styles/base/_elements.scss
@@ -4,6 +4,11 @@
     If necessary
 */
 @use '../settings' as *;
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: $font-family;
   font-size: $base-font-size;
