--- a/styles/base/_elements.scss
+++ b/styles/base/_elements.scss
@@ -38,14 +38,14 @@ th,
 td {
   text-align: left;
   padding: 0.75em 1em;
-  border: 1px solid $grey-black-20;
+  border: 1px solid $color-grey-black-20;
 }
 
 th {
-  background-color: $grey-black-05;
+  background-color: $color-grey-black-05;
   font-weight: $font-weight-bold;
 }
 
 tr:nth-child(even) td {
-  background-color: $grey-black-05;
+  background-color: $color-grey-black-05;
 }
