--- a/styles/settings/_colors.scss
+++ b/styles/settings/_colors.scss
@@ -1,72 +1,94 @@
-/*
- * Brand, UI, Grayscale, and Feedback color tokens
- */
-
-/* Brand */
+/*************************
+      Main colour
+*************************/
+// Brand Colours
 $color-primary: #017ac9;
 $color-primary-navy: #134276;
 $color-primary-dark-navy: #162c45;
 $color-secondary-teal: #35c0ba;
-$color-accessible-teal: #23807b;
-$color-salmon: #f75c58;
-$color-purple: #3a54a1;
-$color-green: #06b271;
-$color-green-light: #e0f0de;
-$color-grey: #696969;
+$color-secondary-accessible-teal: #23807b;
+$color-secondary-salmon: #f75c58;
+$color-secondary-purple: #3a54a1;
+$color-tertiary-green: #06b271;
+$color-tertiary-green-light: #e0f0de;
+$color-tertiary-grey: #696969;
 
+// Neutral Colours
+$color-grey-black-05: #f2f2f2;
+$color-grey-black-10: #dddddd;
+$color-grey-black-20: #cccccc;
+$color-grey-black-40: #999999;
+$color-grey-black-60: #666666;
+$color-grey-black-80: #333333;
+$color-grey-black-100: #000000;
+$color-white: #ffffff;
+
+// Feedback Colours
+$color-feedback-green: #388314;
+$color-feedback-orange: #fa7f14;
+$color-feedback-red: #d03633;
+$color-feedback-pink: #b53cde;
+
+// Gradient
+$color-gradient-blue: linear-gradient(
+  135deg,
+  $color-primary 25%,
+  $color-primary-navy 100%
+);
+
+$color-gradient-green: linear-gradient(
+  135deg,
+  $color-secondary-teal 25%,
+  $color-secondary-accessible-teal 100%
+);
+
+$color-gradient-light: linear-gradient(
+  135deg,
+  $color-grey-black-20 25%,
+  $color-grey-black-40 100%
+);
+
+$color-gradient-grey-dark: linear-gradient(
+  135deg,
+  $color-grey-black-60 25%,
+  $color-grey-black-80 100%
+);
+
+/************************
+      Semantic use
+*************************/
 /* UI Text */
-$text-accent: #017ac9;
-$text-dark: #134276;
-$text-primary: #1f1f1f;
-$text-secondary: #666666;
-$text-white: #f0f0f0;
-$text-error: #c94040;
-$text-success: #3c7a2e;
+$text-accent: $color-primary;
+$text-dark: $color-primary-navy;
+$text-primary: $color-grey-black-80;
+$text-secondary: $color-grey-black-60;
+$text-white: $color-white;
+$text-error: $color-feedback-red;
+$text-success: $color-feedback-green;
 
 /* UI Background */
-$bg-accent: #017ac9;
-$bg-dark: #134276;
-$bg-primary: #ffffff;
-$bg-secondary: #f4f4f4;
-$bg-tertiary: #e0e0e0;
-$bg-error: #c94040;
-$bg-success: #3c7a2e;
-$bg-warning: #f7922b;
+$bg-accent: $color-primary;
+$bg-dark: $color-primary-navy;
+$bg-primary: $color-white;
+$bg-secondary: $color-grey-black-05;
+$bg-tertiary: $color-grey-black-10;
+$bg-error: $color-feedback-red;
+$bg-success: $color-feedback-green;
+$bg-warning: $color-feedback-orange;
 
 /* UI Icons */
-$icon-accent: #017ac9;
-$icon-dark: #134276;
-$icon-primary: #1f1f1f;
-$icon-secondary: #666666;
-$icon-light: #f0f0f0;
-$icon-error: #c94040;
-$icon-success: #3c7a2e;
-$icon-warning: #f7922b;
+$icon-accent: $color-primary;
+$icon-dark: $color-primary-navy;
+$icon-primary: $color-grey-black-80;
+$icon-secondary: $color-grey-black-60;
+$icon-light: $color-white;
+$icon-error: $color-feedback-red;
+$icon-success: $color-feedback-green;
+$icon-warning: $color-feedback-orange;
 
 /* UI Stroke */
-$stroke-accent: #017ac9;
-$stroke-primary: #1f1f1f;
-$stroke-secondary: #666666;
-$stroke-error: #c94040;
-$stroke-focus: #cb5edb;
-
-/* Greyscale */
-$grey-black-100: #000000;
-$grey-black-80: #333333;
-$grey-black-60: #666666;
-$grey-black-40: #999999;
-$grey-black-20: #cccccc;
-$grey-black-10: #dddddd;
-$grey-black-05: #f2f2f2;
-$grey-white: #ffffff;
-
-/* Feedback */
-$feedback-green: #388314;
-$feedback-orange: #fa7f14;
-$feedback-red: #d03633;
-$feedback-pink: #b53cde;
-
-/* buttons */
-$color-primary: #017ac9;
-$color-primary-dark: #134276;
-$color-primary-darker: #0a2a56; /* Approximation of Background/Dark/Dark */
+$stroke-accent: $color-primary;
+$stroke-primary: $color-grey-black-80;
+$stroke-secondary: $color-grey-black-60;
+$stroke-error: $color-feedback-red;
+$stroke-focus: $color-feedback-pink;
