--- a/styles/settings/_fonts.scss
+++ b/styles/settings/_fonts.scss
@@ -7,76 +7,82 @@
 @use './breakpoints' as *;
 
 $font-family: 'Atkinson Hyperlegible Next', sans-serif;
-$font-weight-light: 300;
-$font-weight-regular: 400;
-$font-weight-medium: 500;
-$font-weight-bold: 700;
-$base-font-size: 16px;
+$size-font-base: 16px;
 
 /* Headings */
-$h1-size: clamp(48px, 5.2vw, 61px);
-$h2-size: clamp(38px, 4vw, 48px);
-
-$h3-size: 32px;
-$h3-size-tablet: 40px;
-$h3-size-desktop: 42px;
-
-$h4-size: clamp(24px, 2.5vw, 32px);
-$h5-size: clamp(22px, 2vw, 24px);
-$h6-size: 20px;
+$size-font-h1: clamp(48px, 5.2vw, 61px);
+$size-font-h2: 38px;
+$size-font-h3: 32px;
+$size-font-h4: 24px;
+$size-font-h5: 22px;
+$size-font-h6: 20px;
 
 /* Text */
-$subtitle-size: 28px;
-$strap-title-size: 20px;
-$paragraph-large: clamp(18px, 1.5vw, 20px);
-$paragraph-default: 16px;
-$paragraph-small: 12px;
-
-$line-height-heading: 1.2;
-$line-height-text: 1.5;
-$letter-spacing: 0;
-$text-color: var(--text-primary);
+$size-font-subtitle: 28px;
+$size-font-strap-title: 20px;
+$size-font-body-default: $size-font-base;
+$size-font-body-small: 12px;
+$size-font-body-large: 18px;
 
 @mixin heading-level-1 {
-    font-size: $h1-size;
+  font-size: $size-font-h1;
+  line-height: 105%;
 }
 
 @mixin heading-level-2 {
-    font-size: $h2-size;
+  font-size: $size-font-h2;
+  line-height: 110%;
 }
 
 @mixin heading-level-3 {
-    font-size: $h3-size;
-
-    @include media('tablet') {
-        font-size: $h3-size-tablet;
-    }
-
-    @include media('desktop') {
-        font-size: $h3-size-desktop;
-    }
+  font-size: $size-font-h3;
+  line-height: 115%;
 }
 
 @mixin heading-level-4 {
-    font-size: $h4-size;
+  font-size: $size-font-h4;
+  line-height: 120%;
 }
 
 @mixin heading-level-5 {
-    font-size: $h5-size;
+  font-size: $size-font-h5;
+  line-height: 125%;
 }
 
 @mixin heading-level-6 {
-    font-size: $h6-size;
+  font-size: $size-font-h6;
+  line-height: 130%;
 }
 
-@mixin paragraph {
-    font-size: $paragraph-small;
+@mixin font-body-default {
+  font-size: $size-font-body-default;
+  line-height: 160%;
+}
 
-    @include media('tablet') {
-        font-size: $paragraph-default;
-    }
+@mixin font-body-small {
+  font-size: $size-font-body-small;
+  line-height: 160%;
+}
 
-    @include media('desktop') {
-        font-size: $paragraph-large;
-    }
+@mixin font-body-large {
+  font-size: $size-font-body-large;
+  line-height: 160%;
+}
+
+@mixin font-link-small {
+  font-size: $size-font-body-small;
+  line-height: 160%;
+  text-decoration: underline;
+}
+
+@mixin font-link-default {
+  font-size: $size-font-body-default;
+  line-height: 160%;
+  text-decoration: underline;
+}
+
+@mixin font-link-large {
+  font-size: $size-font-body-default;
+  line-height: 160%;
+  text-decoration: underline;
 }
