style: border, elevation, spacing

--- a/styles/settings/_index.scss
+++ b/styles/settings/_index.scss
@@ -3,3 +3,6 @@
 @forward './tokens';
 @forward './utils';
 @forward './breakpoints';
+@forward './spacings';
+@forward './borders';
+@forward './elevations';
